removed execution logic from adapters